# fraud-rule-engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.advisory.yml  docker-compose.yml  pom.xml
docs/: advisory-eval.md
simulator/: .gitignore  Makefile  README.md  pyproject.toml
simulator/simulator/: __init__.py  cli.py
simulator/simulator/agents/: __init__.py
simulator/simulator/agents/personas/: __init__.py  honest.py  scripted_adversary.py
simulator/simulator/analysis/: __init__.py  auditor.py  metrics.py  yaml_validator.py
simulator/simulator/config/: profile.default.yaml  profile.local.yaml  scenarios.seed.yaml
simulator/simulator/llm/: __init__.py  audit_writer.py  ollama_client.py  scenario_generator.py  triage.py
simulator/simulator/orchestrator/: __init__.py  account_pool.py  finalize.py  runner.py
simulator/simulator/reports/run-20260529T080050Z/: audit_report.md  metrics.json  sink.db
simulator/simulator/reports/run-20260529T092118Z/: audit_report.md  metrics.json  raw_decisions.parquet
simulator/simulator/scenarios/: __init__.py  _helpers.py  evasion.py  rule_coverage.py  security.py  security_runner.py  spec_bridge.py
simulator/simulator/scripts/: predicates.allowlist.json
simulator/simulator/telemetry/: __init__.py  sink.py
simulator/simulator/transport/: __init__.py  auth.py  k6_wrapper.py  models.py  pg_admin.py  rest.py
simulator/tasks/: todo.md
simulator/tests/: test_account_pool.py  test_analysis.py  test_determinism.py  test_finalize.py  test_honest_persona.py  test_k6_wrapper.py  test_llm.py  test_runner.py  test_scaffolding.py  test_scenarios.py  test_security_runner.py  test_spec_bridge.py  test_telemetry_sink.py  test_transport_auth.py  test_transport_models.py  test_transport_rest.py
(+177 files in other folders)
